<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.auth.ui.screens.login.LoginFragment">

        <!--  TODO: Use guidelines if few views need to margined -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/marginStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/marginEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_margin" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/primary_bg_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Login to your app"
                />

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailTextField"
            style="@style/app_text_fields_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:hint="@string/email"
            app:layout_constraintEnd_toStartOf="@id/marginEnd"
            app:layout_constraintStart_toEndOf="@id/marginStart"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordTextField"
            style="@style/app_text_fields_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@id/marginEnd"
            app:layout_constraintStart_toEndOf="@id/marginStart"
            app:layout_constraintTop_toBottomOf="@id/emailTextField" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/log_in"
            app:layout_constraintEnd_toStartOf="@id/marginEnd"
            app:layout_constraintStart_toEndOf="@id/marginStart"
            app:layout_constraintTop_toBottomOf="@id/passwordTextField" />

        <View
            android:id="@+id/dividerFirstPart"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_color"
            app:layout_constraintBottom_toBottomOf="@id/dividerText"
            app:layout_constraintEnd_toStartOf="@id/dividerText"
            app:layout_constraintStart_toEndOf="@id/marginStart"
            app:layout_constraintTop_toTopOf="@id/dividerText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dividerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_1sdp"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/or"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@id/dividerLastPart"
            app:layout_constraintStart_toEndOf="@id/dividerFirstPart"
            app:layout_constraintTop_toBottomOf="@id/loginButton" />

        <View
            android:id="@+id/dividerLastPart"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_color"
            app:layout_constraintBottom_toBottomOf="@id/dividerText"
            app:layout_constraintEnd_toStartOf="@id/marginEnd"
            app:layout_constraintStart_toEndOf="@id/dividerText"
            app:layout_constraintTop_toTopOf="@id/dividerText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toStartOf="@id/marginEnd"
            app:layout_constraintStart_toEndOf="@id/marginStart"
            app:layout_constraintTop_toBottomOf="@id/dividerText" />


        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:indeterminate="true"
            android:indeterminateTint="@color/progress_bar_color"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>